SubVersion: $Id$

Set svn:eol property to native on all files
	
To do : 
- manage ERR packets which can be received at any time
- check up progress bars: they should only show the total amount of the operation (no blocks)

Log:

- 11/06/2006, version 0.2.1: roms
	- reworked/added field in CalcUpdate structure (API compat broken here, again) 
	- added field in the CalcFncts structure which tells which counter may be used for refresh
	- checked/fixed all pbar counters
	- fixed typo (waiting -> waiting for)
	- some calcs needs 2P1L refresh for ROM dumper
	- some varname<->utf conversions were missing
	- adapt refresh of cnt1 depending on the link cable transfer capability
	- reset cnt2 value at transfer startup (needed and missing)

- 08/06/2006, version 0.2.0: roms
	- reworked dirlist API (API compat broken here)
	- changed FLASH app dirlist format to be the same as var one
	- don't count archived (=FLASH) variables in ticalcs_dirlist_ram_used
	- updated 68k ROM dumpers to dump 8 MB on HW4 and rebuilt them with the latest CVS TIGCC (GCC 4.1.1, reduces size) (kevin)

- 05/06/2006, version 0.1.5: roms
	- added stdints3.h header
	- increased verbosity of USB commands layer
	- re-enabled TI84+ OS sending
	
- 31/05/2006, version 0.1.4: roms
	- don't export ticalcs_probe_calc_1/2 any longer because they can't 
	be used easily outside of the library
	- fixed critical bug in the DBUS (2-bytes buffer overflow) and possible
	bug in the DUSB packet layer (null remainder).
	- fixed bug in TI84+ recv_idlist (attempting to modify const string)
	
- 26/05/2006, version 0.1.3: roms/tyler
	- definetely fixed warnings on TI keys structures (roms)
	- fixed TI-83+/TI-84+ ROM Dumping Timeout Error Bug (tyler)

- 16/05/2006, version 0.1.2: roms
	- implemented send_os for Titanium/USB and fixed some commands
	- implemented send_os for TI84+/USB
	- added Titanium/USB ROM dumper
	- increased ROM dumper block size from 1KB to 4KB (faster)
	- fixed misfeature in Titanium get_dirlist